--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -25,21 +26,23 @@
 <script type="importmap">
 {
   "imports": {
-    "mssql": "https://aistudiocdn.com/mssql@^12.1.0",
-    "express": "https://aistudiocdn.com/express@^5.1.0",
-    "cors": "https://aistudiocdn.com/cors@^2.8.5",
     "react/": "https://aistudiocdn.com/react@^19.2.0/",
     "react": "https://aistudiocdn.com/react@^19.2.0",
     "lucide-react": "https://aistudiocdn.com/lucide-react@^0.554.0",
     "react-dom/": "https://aistudiocdn.com/react-dom@^19.2.0/",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.9.6",
-    "vite": "https://aistudiocdn.com/vite@^7.2.4",
-    "@vitejs/plugin-react": "https://aistudiocdn.com/@vitejs/plugin-react@^5.1.1",
-    "path": "https://aistudiocdn.com/path@^0.12.7",
-    "fs": "https://aistudiocdn.com/fs@^0.0.1-security",
-    "url": "https://aistudiocdn.com/url@^0.11.4",
-    "child_process": "https://aistudiocdn.com/child_process@^1.0.2",
-    "dotenv/": "https://esm.sh/dotenv@^17.2.3/"
+    "express": "https://esm.sh/express@^5.2.1",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "path": "https://esm.sh/path@^0.12.7",
+    "url": "https://esm.sh/url@^0.11.4",
+    "vite": "https://esm.sh/vite@^7.3.1",
+    "dotenv/": "https://esm.sh/dotenv@^17.2.3/",
+    "cors": "https://esm.sh/cors@^2.8.5",
+    "mssql": "https://esm.sh/mssql@^12.2.0",
+    "fs": "https://esm.sh/fs@^0.0.1-security",
+    "child_process": "https://esm.sh/child_process@^1.0.2",
+    "@google/genai": "https://esm.sh/@google/genai@^1.38.0",
+    "net": "https://esm.sh/net@^1.0.2"
   }
 }
 </script>
